@@ -1,5 +1,3 @@
-DIST imgur-0.3.0.tar.gz 325760 RMD160 0972233aa24daf30d4ba48898511d8c8ca6e736e SHA1 78aa0e476c3800f1a475dc59e776e4be3533c12f SHA256 7a2dc852e2f7deaf917707a37211e57d96444baac871d4aafce507cda9f0c85a
-EBUILD imgur-integration-0.3.0.ebuild 907 RMD160 e4ec93c2e7023c947f30d2f0565d703f87bd585f SHA1 c79dc1fe1f6fbc157fe32cca22c88491e814a275 SHA256 ba2635c04117635eecd9fa4904053a5eef901a1f279be1bf222f1602ca4e921d
-EBUILD imgur-integration-9999.ebuild 1239 RMD160 767fcb038b6eb177db2af2b9a04788fda10d23f7 SHA1 42fd97edd421d05eadc19ef39a46e865c300ca4f SHA256 0385d5b81c9346f1f98ed0598d456149a4ecab47a4ccbde235d514d253a7479c
-MISC ChangeLog 459 RMD160 450933f182f8f1fc7be4ed84d676be538f5ba8bd SHA1 1c5d2fbf21b7643c00f0d07521da5c8f25b7dfa7 SHA256 bb9483fcf7e53c60fc80a24a868e96bcc69b2212af81ee34232a885b68d2841a
+EBUILD imgur-integration-9999.ebuild 1242 RMD160 f6794f3fd4317bf616b92db481d2bbf155e9ba1b SHA1 c8e60d98ffd7a7922957ad34d84d795525dd1ee4 SHA256 18ee1e1c22fee42cec2d0ba7c03a8445d58cef00aec001711272ecc9b18c553f
+MISC ChangeLog 641 RMD160 7da34e9cfda63e88f6629fda6a855fd7b2d0ac3d SHA1 fc3617db58f6fc722e4503454ff99b329aeb1968 SHA256 c94ecdc660ace3c27ca828f6a217b11fa06e4c1901193a3f8ca2600f8098d900
 MISC metadata.xml 318 RMD160 9b0184a48e30234241f34ffb077c90d1948e26d2 SHA1 614fa9d995dd9505fdc07a34a24f169930c13bfc SHA256 32fecb4577347fc4efbcd8fc2ea3d8144d8fe9a3c9037e0400dbb14c5adb40f1
